corpus/cpp/overload/case-07/snapshots/gcc9_12/single_sink_structured/render.ci.txt
src/main.cpp:5:17: error: type or overload mismatch
help: compare the expected type and actual argument at the call site
why: invalid conversion from 'const char*' to 'short int'
| src/main.cpp:5:17
|     takes_short("x");
|                 ^~
src/main.cpp:1:18: note:   initializing argument 1 of 'void takes_short(short int)'
note: wrapper confidence is low; verify against the preserved raw diagnostics
why:   initializing argument 1 of 'void takes_short(short int)'
| src/main.cpp:1:18
| void takes_short(short);
|                  ^~~~
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output